# indexooooor

./: .gitignore  Cargo.toml  README.md  first_10k_sats.json  mining_pools.json  traits.json
src/: main.rs
