[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
bitcoind-async-client = "0.3.0"
tokio = "1.47.1"
anyhow = "1.0.98"
hex = "0.4"
bitcoin = { version = "0.32.5", features = ["serde"] }
reqwest = "0.12.22"
image = "0.25.6"
webp = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"